<package format="3">
  <name>engineer_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for engineer</p>
    <p>This package contains configuration data, 3D models and launch files
for engineer robot</p>
  </description>
  <author>Your Name</author>
  <maintainer email="user@example.com">Maintainer Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
  <build_type>ament_cmake</build_type>
    <!-- <architecture_independent /> -->
  </export>
</package>